Add some flags that worked on ec2